# ghostmodule-template

./: .gitignore  .travis.yml  CMakeLists.txt  NOTICE.txt  README.md  appveyor.yml  conanfile.txt
cmake/: generate_protobuf.cmake
include/: README.md
protobuf/: README.md  connection_grpc_robot.proto
src/: CMakeLists.txt  README.md  connection_grpc_robot.cpp  module_minimum.cpp
tests/: README.md
